[tool.poetry]
name = "tictactoe"
version = "0.9.0"
description = "Y_Lab University Homework step 2"
authors = ["Sevenamber <sevenamber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

